
version = '1.0'
apply plugin: 'java'
apply plugin: 'eclipse'
apply plugin: 'idea'


allprojects {
  apply plugin: 'java'
  sourceCompatibility = 1.8
  targetCompatibility = 1.8
}

subprojects {
    apply plugin: 'java'
    apply plugin: 'eclipse'
    apply plugin: 'idea'

	repositories {
	    mavenCentral()
	}
}

project(':fpinjava-common') {

  dependencies {
    testImplementation group: 'junit', name: 'junit', version: '4.+'
  }
}

project(':fpinjava-introduction') {

  dependencies {
    implementation project(':fpinjava-common')
    testImplementation group: 'junit', name: 'junit', version: '4.+'
  }
}

project(':fpinjava-usingfunctions-exercises') {

  dependencies {
    implementation project(':fpinjava-common')
    testImplementation group: 'junit', name: 'junit', version: '4.+'
  }
}

project(':fpinjava-usingfunctions-solutions') {

  dependencies {
    implementation project(':fpinjava-common')
    testImplementation group: 'junit', name: 'junit', version: '4.+'
  }
}

project(':fpinjava-makingjavafunctional-exercises') {

  dependencies {
    implementation project(':fpinjava-common')
    testImplementation group: 'junit', name: 'junit', version: '4.+'
  }
}

project(':fpinjava-makingjavafunctional-solutions') {

  dependencies {
    implementation project(':fpinjava-common')
    testImplementation group: 'junit', name: 'junit', version: '4.+'
  }
}

project(':fpinjava-recursion-exercises') {

  dependencies {
    implementation project(':fpinjava-common')
    testImplementation group: 'junit', name: 'junit', version: '4.11'
  }
}

project(':fpinjava-recursion-solutions') {

  dependencies {
    implementation project(':fpinjava-common')
    testImplementation group: 'junit', name: 'junit', version: '4.11'
  }
}

project(':fpinjava-lists-exercises') {

  dependencies {
    implementation project(':fpinjava-common')
    testImplementation group: 'junit', name: 'junit', version: '4.+'
  }
}

project(':fpinjava-lists-solutions') {

  dependencies {
    implementation project(':fpinjava-common')
    testImplementation group: 'junit', name: 'junit', version: '4.+'
  }
}

project(':fpinjava-optionaldata-exercises') {

  dependencies {
    implementation project(':fpinjava-common')
    implementation project(':fpinjava-lists-exercises')
    testImplementation group: 'junit', name: 'junit', version: '4.+'
  }
}

project(':fpinjava-optionaldata-solutions') {

  dependencies {
    implementation project(':fpinjava-common')
    testImplementation group: 'junit', name: 'junit', version: '4.+'
  }
}

project(':fpinjava-handlingerrors-exercises') {

  dependencies {
    implementation project(':fpinjava-common')
    implementation project(':fpinjava-lists-exercises')
    testImplementation group: 'junit', name: 'junit', version: '4.+'
  }
}

project(':fpinjava-handlingerrors-solutions') {

  dependencies {
    implementation project(':fpinjava-common')
    implementation project(':fpinjava-handlingerrors-exercises')
    testImplementation group: 'junit', name: 'junit', version: '4.+'
  }
}

project(':fpinjava-advancedlisthandling-exercises') {

  dependencies {
    implementation project(':fpinjava-common')
    testImplementation group: 'junit', name: 'junit', version: '4.+'
  }
}

project(':fpinjava-advancedlisthandling-solutions') {

  dependencies {
    implementation project(':fpinjava-common')
    implementation project(':fpinjava-advancedlisthandling-exercises')
    testImplementation group: 'junit', name: 'junit', version: '4.+'
  }
}

project(':fpinjava-laziness-exercises') {

  dependencies {
    implementation project(':fpinjava-common')
    testImplementation group: 'junit', name: 'junit', version: '4.+'
  }
}

project(':fpinjava-laziness-solutions') {

  dependencies {
    implementation project(':fpinjava-common')
    testImplementation group: 'junit', name: 'junit', version: '4.+'
  }
}

project(':fpinjava-trees-exercises') {

  dependencies {
    implementation project(':fpinjava-common')
    testImplementation group: 'junit', name: 'junit', version: '4.+'
  }
}

project(':fpinjava-trees-solutions') {

  dependencies {
    implementation project(':fpinjava-common')
    testImplementation group: 'junit', name: 'junit', version: '4.+'
  }
}

project(':fpinjava-advancedtrees-exercises') {

  dependencies {
    implementation project(':fpinjava-common')
    testImplementation group: 'junit', name: 'junit', version: '4.+'
  }
}

project(':fpinjava-advancedtrees-solutions') {

  dependencies {
    implementation project(':fpinjava-common')
    testImplementation group: 'junit', name: 'junit', version: '4.+'
  }
}

project(':fpinjava-state-exercises') {

  dependencies {
    implementation project(':fpinjava-common')
    testImplementation group: 'junit', name: 'junit', version: '4.+'
  }
}

project(':fpinjava-state-solutions') {

  dependencies {
    implementation project(':fpinjava-common')
    testImplementation group: 'junit', name: 'junit', version: '4.+'
  }
}

project(':fpinjava-io-exercises') {

  dependencies {
    implementation project(':fpinjava-common')
    testImplementation group: 'junit', name: 'junit', version: '4.+'
  }
}

project(':fpinjava-io-solutions') {

  dependencies {
    implementation project(':fpinjava-common')
    testImplementation group: 'junit', name: 'junit', version: '4.+'
  }
}

project(':fpinjava-actors') {

  dependencies {
    implementation project(':fpinjava-common')
    testImplementation group: 'junit', name: 'junit', version: '4.+'
  }
}

project(':fpinjava-applications') {

  dependencies {
    implementation project(':fpinjava-common')
    implementation group: 'org.jdom', name: 'jdom2', version: '2.0.6'
    testImplementation group: 'junit', name: 'junit', version: '4.+'
  }
}
